fix balloons css scrollbar.
Plus added some more options

--- a/src/shared/components/balloons/balloons.component.scss
+++ b/src/shared/components/balloons/balloons.component.scss
@@ -4,11 +4,14 @@
   display: block;
   position: relative;
   z-index: 999;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 .balloon {
   $size: 80px;
   display: inline-block;
-  transition: transform 7s linear, opacity .2s;
+  transition: opacity .2s;
   opacity: 0;
   @include position(absolute, 0 auto auto 30%);
   transform: translate3d(0, 700px, 0);
